// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Connect TerminaI to a Model Provider                                                                               │
│                                                                                                                      │
│   TerminaI uses Gemini for intelligence. Choose your connection method:                                              │
│                                                                                                                      │
│   (selected) Login with Google(not selected) Use Gemini API Key(not selected) Vertex AI                              │
│                                                                                                                      │
│   Something went wrong                                                                                               │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Service and Privacy Notice for TerminaI                                                                   │
│                                                                                                                      │
│   https://github.com/Prof-Harita/terminaI/blob/main/docs/tos-privacy.md                                              │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Connect TerminaI to a Model Provider                                                                               │
│                                                                                                                      │
│   TerminaI uses Gemini for intelligence. Choose your connection method:                                              │
│                                                                                                                      │
│   (selected) Login with Google(not selected) Use Gemini API Key(not selected) Vertex AI                              │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Service and Privacy Notice for TerminaI                                                                   │
│                                                                                                                      │
│   https://github.com/Prof-Harita/terminaI/blob/main/docs/tos-privacy.md                                              │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Connect TerminaI to a Model Provider                                                                               │
│                                                                                                                      │
│   TerminaI uses Gemini for intelligence. Choose your connection method:                                              │
│                                                                                                                      │
│   (selected) Use Gemini API Key                                                                                      │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
│   Terms of Service and Privacy Notice for TerminaI                                                                   │
│                                                                                                                      │
│   https://github.com/Prof-Harita/terminaI/blob/main/docs/tos-privacy.md                                              │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
